manifests/musicociel-0.0.0.tgz-manifest.yaml
---
# Source: musicociel/templates/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: "my-release-keycloak"
  labels:
    app.kubernetes.io/name: "keycloak"
    app.kubernetes.io/instance: "my-release"
    app.kubernetes.io/managed-by: "Helm"
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: "keycloak"
    app.kubernetes.io/instance: "my-release"
    app.kubernetes.io/managed-by: "Helm"
---
# Source: musicociel/templates/musicociel.yaml
apiVersion: v1
kind: Service
metadata:
  name: "my-release-musicociel"
  labels:
    app.kubernetes.io/name: "musicociel"
    app.kubernetes.io/instance: "my-release"
    app.kubernetes.io/managed-by: "Helm"
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: "musicociel"
    app.kubernetes.io/instance: "my-release"
    app.kubernetes.io/managed-by: "Helm"
---
# Source: musicociel/templates/postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: "my-release-postgresql"
  labels:
    app.kubernetes.io/name: "postgresql"
    app.kubernetes.io/instance: "my-release"
    app.kubernetes.io/managed-by: "Helm"
spec:
  ports:
  - name: postgresql
    port: 5432
    targetPort: 5432
  selector:
    app.kubernetes.io/name: "postgresql"
    app.kubernetes.io/instance: "my-release"
    app.kubernetes.io/managed-by: "Helm"
---
# Source: musicociel/templates/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "my-release-keycloak"
  labels:
    app.kubernetes.io/name: "keycloak"
    app.kubernetes.io/instance: "my-release"
    app.kubernetes.io/managed-by: "Helm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "keycloak"
      app.kubernetes.io/instance: "my-release"
      app.kubernetes.io/managed-by: "Helm"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "keycloak"
        app.kubernetes.io/instance: "my-release"
        app.kubernetes.io/managed-by: "Helm"
    spec:
      containers:
      - name: keycloak
        image: "quay.io/keycloak/keycloak:23.0.3"
        args:
          - start
          - "--health-enabled=true"
          - "--proxy=edge"
          - "--hostname-url=http://keycloak.local"
          - "--db=postgres"
          - "--db-url=jdbc:postgresql://my-release-postgresql/keycloak"
          - "--db-username=$(DB_USER)"
          - "--db-password=$(DB_PASSWORD)"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
            httpHeaders:
            - name: X-Forwarded-For
              value: "127.0.0.1"
            - name: X-Forwarded-Proto
              value: "http"
            - name: X-Forwarded-Host
              value: "keycloak.local"
---
# Source: musicociel/templates/musicociel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "my-release-musicociel"
  labels:
    app.kubernetes.io/name: "musicociel"
    app.kubernetes.io/instance: "my-release"
    app.kubernetes.io/managed-by: "Helm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "musicociel"
      app.kubernetes.io/instance: "my-release"
      app.kubernetes.io/managed-by: "Helm"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "musicociel"
        app.kubernetes.io/instance: "my-release"
        app.kubernetes.io/managed-by: "Helm"
    spec:
      containers:
      - name: musicociel
        image: 'docker.io/davdiv/musicociel:dev'
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            httpHeaders:
            - name: X-Forwarded-For
              value: "127.0.0.1"
            - name: X-Forwarded-Proto
              value: "http"
            - name: X-Forwarded-Host
              value: "musicociel.local"
            path: "/musicociel.json"
            port: 8080
---
# Source: musicociel/templates/postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "my-release-postgresql"
  labels:
    app.kubernetes.io/name: "postgresql"
    app.kubernetes.io/instance: "my-release"
    app.kubernetes.io/managed-by: "Helm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "postgresql"
      app.kubernetes.io/instance: "my-release"
      app.kubernetes.io/managed-by: "Helm"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "postgresql"
        app.kubernetes.io/instance: "my-release"
        app.kubernetes.io/managed-by: "Helm"
    spec:
      containers:
      - name: postgresql
        image: "docker.io/library/postgres:15.2-alpine"
        ports:
        - name: postgresql
          containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: "my-release-postgresql"
---
# Source: musicociel/templates/keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "my-release-keycloak"
spec:
  rules:
  - host: "keycloak.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: "my-release-keycloak"
            port:
              name: http
---
# Source: musicociel/templates/musicociel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "my-release-musicociel"
spec:
  rules:
  - host: "musicociel.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: "my-release-musicociel"
            port:
              name: http
